--- a/Wk3_Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Wk3_Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,9 @@
     "# Import libraries\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,21 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\SQF\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(len(borough)):\n",
     "    if Neighbourhood.iloc[i]=='Not assigned':\n",
@@ -156,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +200,7 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,6 +208,24 @@
    "source": [
     "df.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
