--- a/Wk3_Latitude and Longitude.ipynb
+++ b/Wk3_Latitude and Longitude.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
@@ -17,11 +15,23 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "%pip install bs4"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "%pip install lxml"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "r=requests.get('https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M')"
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +48,7 @@
        "200"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,21 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(r.text,'lxml')"
+    "soup = BeautifulSoup(r.text,'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tbodys = soup.find('tbody')"
@@ -71,10 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#table header capture\n",
@@ -84,10 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "rows = tbodys.find_all('tr')\n",
@@ -100,10 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df=pd.DataFrame(table,columns=header)"
@@ -118,10 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df=df[~(df['Borough']=='Not assigned')] "
@@ -129,10 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "postcode=df.Postcode\n",
@@ -149,10 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(borough)):\n",
@@ -162,10 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "postcode=df.Postcode.tolist()\n",
@@ -182,10 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_table=[]\n",
@@ -202,10 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df=pd.DataFrame(new_table,columns=header)"
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +210,7 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,55 +221,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geocoder # import geocoder\n",
-    "\n",
-    "postal_codes = df['Postcode'].values"
+    "df1=pd.read_csv('https://cocl.us/Geospatial_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.rename(columns={'Postal Code':'Postcode'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lldf=df.merge(df1,on='Postcode')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 5)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lldf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Harbourfront</td>\n",
+       "      <td>43.654260</td>\n",
+       "      <td>-79.360636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Heights, Lawrence Manor</td>\n",
+       "      <td>43.718518</td>\n",
+       "      <td>-79.464763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>43.662301</td>\n",
+       "      <td>-79.389494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>M8X</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>The Kingsway, Montgomery Road, Old Mill North</td>\n",
+       "      <td>43.653654</td>\n",
+       "      <td>-79.506944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>M4Y</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Church and Wellesley</td>\n",
+       "      <td>43.665860</td>\n",
+       "      <td>-79.383160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>M7Y</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>Business Reply Mail Processing Centre 969 Eastern</td>\n",
+       "      <td>43.662744</td>\n",
+       "      <td>-79.321558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>M8Y</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Humber Bay, King's Mill Park, Kingsway Park So...</td>\n",
+       "      <td>43.636258</td>\n",
+       "      <td>-79.498509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>M8Z</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Kingsway Park South West, Mimico NW, The Queen...</td>\n",
+       "      <td>43.628841</td>\n",
+       "      <td>-79.520999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Postcode           Borough  \\\n",
+       "0        M3A        North York   \n",
+       "1        M4A        North York   \n",
+       "2        M5A  Downtown Toronto   \n",
+       "3        M6A        North York   \n",
+       "4        M7A      Queen's Park   \n",
+       "..       ...               ...   \n",
+       "98       M8X         Etobicoke   \n",
+       "99       M4Y  Downtown Toronto   \n",
+       "100      M7Y      East Toronto   \n",
+       "101      M8Y         Etobicoke   \n",
+       "102      M8Z         Etobicoke   \n",
+       "\n",
+       "                                         Neighbourhood   Latitude  Longitude  \n",
+       "0                                            Parkwoods  43.753259 -79.329656  \n",
+       "1                                     Victoria Village  43.725882 -79.315572  \n",
+       "2                                         Harbourfront  43.654260 -79.360636  \n",
+       "3                     Lawrence Heights, Lawrence Manor  43.718518 -79.464763  \n",
+       "4                                         Queen's Park  43.662301 -79.389494  \n",
+       "..                                                 ...        ...        ...  \n",
+       "98       The Kingsway, Montgomery Road, Old Mill North  43.653654 -79.506944  \n",
+       "99                                Church and Wellesley  43.665860 -79.383160  \n",
+       "100  Business Reply Mail Processing Centre 969 Eastern  43.662744 -79.321558  \n",
+       "101  Humber Bay, King's Mill Park, Kingsway Park So...  43.636258 -79.498509  \n",
+       "102  Kingsway Park South West, Mimico NW, The Queen...  43.628841 -79.520999  \n",
+       "\n",
+       "[103 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lldf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "for postal_code in postal_codes:\n",
-    "    # initialize your variable to None\n",
-    "    lat_lng_coords = None\n",
-    "\n",
-    "    # loop until you get the coordinates\n",
-    "    while(lat_lng_coords is None):\n",
-    "      g = geocoder.google('{}, Toronto, Ontario'.format(postal_code))\n",
-    "      lat_lng_coords = g.latlng\n",
-    "\n",
-    "    latitude = lat_lng_coords[0]\n",
-    "    longitude = lat_lng_coords[1]\n",
-    "    new_table.append([latitude,longitude])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "header.append(['Latitude','Longitude'])\n",
-    "pd.DataFrame(new_table,columns=header)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -293,9 +456,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
