--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -59,7 +59,215 @@
     "        \n",
     "2. Singapore official geocoding data through OneMap API: http://developers.onemap.sg/commonapi/\n",
     "\n",
+    "\n",
     "Note: Foursquare API is slower and less reliable than official OneMap API, which also gives geocoding and relevant info for Singapore locations. Hence in this project, we will replace Foursquare API with OneMap API\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Schema\n",
+    "\n",
+    "     Name: 'blk_no'\n",
+    "        Title: 'Block number'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'street'\n",
+    "        Title: 'Street'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'max_floor_lvl'\n",
+    "        Title: 'Maximum floor level'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of storeys'\n",
+    "      -\n",
+    "        Name: 'year_completed'\n",
+    "        Title: 'Year completed'\n",
+    "        Type: 'datetime'\n",
+    "        Sub Type: 'year'\n",
+    "        Format: 'YYYY'\n",
+    "      -\n",
+    "        Name: 'residential'\n",
+    "        Title: 'Residential property tag'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'commercial'\n",
+    "        Title: 'Commercial property tag'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'market_hawker'\n",
+    "        Title: 'Market and hawker tag'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'miscellaneous'\n",
+    "        Title: 'Miscellaneous'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "        Description: 'Examples include admin office, childcare centre, education centre,\n",
+    "          Residents'' Committees centre'\n",
+    "      -\n",
+    "        Name: 'multistorey_carpark'\n",
+    "        Title: 'Multi-storey carpark tag'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'precinct_pavilion'\n",
+    "        Title: 'Precinct pavilion tag'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'bldg_contract_town'\n",
+    "        Title: 'Town'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "        Description:\n",
+    "          - 'Legend:'\n",
+    "          - 'AMK - ANG MO KIO'\n",
+    "          - 'BB - BUKIT BATOK'\n",
+    "          - 'BD - BEDOK'\n",
+    "          - 'BH - BISHAN'\n",
+    "          - 'BM - BUKIT MERAH'\n",
+    "          - 'BP - BUKIT PANJANG'\n",
+    "          - 'BT - BUKIT TIMAH'\n",
+    "          - 'CCK - CHOA CHU KANG'\n",
+    "          - 'CL - CLEMENTI'\n",
+    "          - 'CT - CENTRAL AREA'\n",
+    "          - 'GL - GEYLANG'\n",
+    "          - 'HG - HOUGANG'\n",
+    "          - 'JE - JURONG EAST'\n",
+    "          - 'JW - JURONG WEST'\n",
+    "          - 'KWN - KALLANG/WHAMPOA'\n",
+    "          - 'MP - MARINE PARADE'\n",
+    "          - 'PG - PUNGGOL'\n",
+    "          - 'PRC - PASIR RIS'\n",
+    "          - 'QT - QUEENSTOWN'\n",
+    "          - 'SB - SEMBAWANG'\n",
+    "          - 'SGN - SERANGOON'\n",
+    "          - 'SK - SENGKANG'\n",
+    "          - 'TAP - TAMPINES'\n",
+    "          - 'TG - TENGAH'\n",
+    "          - 'TP - TOA PAYOH'\n",
+    "          - 'WL - WOODLANDS'\n",
+    "          - 'YS - YISHUN'\n",
+    "      -\n",
+    "        Name: 'total_dwelling_units'\n",
+    "        Title: 'Total dwelling units'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: '1room_sold'\n",
+    "        Title: 'Number of 1-room sold flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: '2room_sold'\n",
+    "        Title: 'Number of 2-room sold flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: '3room_sold'\n",
+    "        Title: 'Number of 3-room sold flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: '4room_sold'\n",
+    "        Title: 'Number of 4-room sold flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: '5room_sold'\n",
+    "        Title: 'Number of 5-room sold flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: 'exec_sold'\n",
+    "        Title: 'Number of Executive sold flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: 'multigen_sold'\n",
+    "        Title: 'Number of Multi-generation sold flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: 'studio_apartment_sold'\n",
+    "        Title: 'Number of Studio apartment sold flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: '1room_rental'\n",
+    "        Title: 'Number of 1-room rental flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: '2room_rental'\n",
+    "        Title: 'Number of 2-room rental flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: '3room_rental'\n",
+    "        Title: 'Number of 3-room rental flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "      -\n",
+    "        Name: 'other_room_rental'\n",
+    "        Title: 'Number of Other room rental flats'\n",
+    "        Type: 'numeric'\n",
+    "        Sub Type: 'general'\n",
+    "        Unit Of Measure: 'No. of units'\n",
+    "       -\n",
+    "        Name: 'quarter'\n",
+    "        Title: 'Quarter'\n",
+    "        Type: 'datetime'\n",
+    "        Sub Type: 'quarter'\n",
+    "        Format: 'YYYY-[Q]Q'\n",
+    "      -\n",
+    "        Name: 'town'\n",
+    "        Title: 'Town'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'flat_type'\n",
+    "        Title: 'Flat Type'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "      -\n",
+    "        Name: 'median_rent'\n",
+    "        Title: 'Median rent'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "        Description:\n",
+    "          - '\"na\" : Data not available or not applicable'\n",
+    "          - '\"-\" : Data is negligible or not significant'\n",
+    " \n",
+    "        -\n",
+    "        Name: 'price'\n",
+    "        Title: 'Median Resale Price'\n",
+    "        Type: 'text'\n",
+    "        Sub Type: 'general'\n",
+    "        Description:\n",
+    "          - '\"na\" : Data not available or not applicable'\n",
+    "          - '\"-\" : Data is negligible or not significant'\n",
     " "
    ]
   },
